2010-06-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* objectImpl.c:
	[ 3016863 ] Data corruption when replacing array properties

	* cimslp.c, cimslpSLP.c:
	[ 3022941 ] Remove HAVE_SLP_ALONE sections

	* profileProvider.c, cimslpCMPI.c:
	[ 3022934 ] SLP code calls setupControl more than once

	* profileProvider.c: 
	[ 3023079 ] slpUpdate does not release ctx on exit

2010-06-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 2950521 ] Provider operations are wrongly traced
	(patch by Till Steinbach)

2010-06-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* instance.c:
	[ 3016295 ] Initialise refcount in CMPIInstance clone
	(patch by Tim Potter)
	
2010-05-27 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimslpSLP.c:
	[ 2984485 ] Possible access to freed memory in cimslpSLP.c
        (based on patch by Klaus Kämpf)

2010-05-27 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* profileProvider.c:
	[ 2994737 ] cimslp fails to get sslCertificateFilePath config value
        (patch by Klaus Kämpf)

2010-05-25  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* sfcBroker.c:
	[ 3006690 ] Remove startSLPAgent sections from sfcBroker

2010-05-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* configure.ac
	[ 3004232 ] configure.ac allows slp-standalone and checks for sfcc
	(second hunk was not applied)

	* cimslpCMPI.h, cimslpCMPI.c:
	[ 3006687 ] ProfileProvider depends on sfcc

2010-05-21 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* tests/slptest/slpTests.sh, Makefile.am, README,
          cimslp.c, cimslp.h, cimslpCMPI.c, cimslpCMPI.h 
	  cimslpSLP.c, cimslpSLP.h, cimslpUtil.c, cimslpUtil.h,
          configure.ac, control.c, profileProvider.c,
          sfcBroker.c, sfcb.cfg.pre.in
        [ 3004257 ] slp information in README is not current
        [ 3004232 ] configure.ac allows slp-standalone and checks for sfcc
        [ 3003508 ] slpTests.sh uses bash-isms
        [ 2987170 ] Handle SLP in a provider
